# cidrize

./: .gitignore  .hgignore  .hgtags  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  LICENSE.md  LICENSE.rst  MANIFEST.in  README  README.md  README.rst  TODO  cidrize.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-app.yml  release-preview.yml  release.yml
examples/: parse_ip
scripts/: cidr
tests/: cidrize.py  test_cidrize.py
