[tool.poetry]
name = "cidrize"
version = "2.1.0"
description = "Cidrize parses IPv4/IPv6 addresses, CIDRs, ranges, and wildcard matches & attempts to return a valid list of IP addresses"
authors = ["Jathan McCollum <jathan@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
keywords = [
    "Networking",
    "Systems",
    "Administration",
    "IANA",
    "IEEE",
    "CIDR",
    "IP",
    "IPv4",
    "IPv6",
    "IP",
    "Address",
    "Firewalls",
    "Security"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education :: Testing",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: System :: Operating System",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities"
]
homepage = "https://github.com/jathanism/cidrize/"
packages = [
    {include = "cidrize.py"}
]
include = [
    "CHANGELOG.rst",
    "LICENSE.rst",
    "TODO",
]

[tool.poetry.dependencies]
python = "^3.8"
netaddr = "~=0.8.0"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
pytest = "^7.2.1"
black = "^23.1.0"
pytest-black = "^0.3.12"
pylint = "^2.7.4"
pytest-pylint = "^0.19.0"

[tool.poetry.scripts]
cidr = "cidrize:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --black --pylint --pylint-error-types CEFw"
testpaths = [
    "tests",
]

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    missing-class-docstring,
    """

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"
